[metadata]
name = cartesian
version = 0.1.0
author = Alexander Ibrahim
description = "Operate on points in continuous 1D, 2D, and 3D space."
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
python_requires = >= 3.10

[options.packages.find]
where = src
