[metadata]
name = cartesian
version = 0.1.1
author = Alexander Ibrahim
description = "Operate on points in continuous 1D, 2D, and 3D space."
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
python_requires = >= 3.9

[options.packages.find]
where = src

[options.extras_require]
testing =
    black>=22.0
    flake8>=5.0
    mypy>=0.970
    pytest>=7.0
    pytest-cov>=3.0

[options.package_data]
cartesian = py.typed

[flake8]
max-line-length = 160
